--- a/M5 Pridictive Modeling/M5 W2 Logistics Regression/Predictive Modelling - Logistic Regression - Mentor Version-1.ipynb
+++ b/M5 Pridictive Modeling/M5 W2 Logistics Regression/Predictive Modelling - Logistic Regression - Mentor Version-1.ipynb
@@ -2564,7 +2564,7 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "best_model = LogisticRegression(grid_search.best_params_)\n"
    ]
   },
   {
@@ -2838,7 +2838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
